--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}}" autocomplete="off" style="font-size: 0.8rem;">
 
     <div class="layout layout--equipment">
         <div class="layout__picture">
@@ -223,7 +223,7 @@
                     <span class="table__data table__padding">{{data.location}}</span>
                 </div>
                 <div class="table__field">
-                    <span class="table__data table__padding">{{data.rating.value}}</span>
+                    <span class="table__data table__padding">{{data.bonus.value}}</span>
                 </div>
                 {{#if data.isArtifact}}
                 <div class="table__field">
