--- a/templates/character-talent-sheet.html
+++ b/templates/character-talent-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} layout layout--talent" autocomplete="off" style="min-height: max-content">
+<form class="{{cssClass}} layout layout--talent" autocomplete="off" style="font-size: 0.85rem;">
     
     <div class="layout__picture">
         <img class="profile-img--small" src="{{item.img}}" data-edit="img" title="{{item.name}}">
