--- a/templates/equipment-sheet.html
+++ b/templates/equipment-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}}" autocomplete="off" style="font-size: 0.8rem;">
 
     <!-- EDIT -->
     <div class="layout layout--equipment">
