--- a/templates/monster-attack-sheet.html
+++ b/templates/monster-attack-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} layout layout--monster-attack" autocomplete="off">
+<form class="{{cssClass}} layout layout--monster-attack" autocomplete="off" style="font-size: 0.8rem;">
 
     <div class="layout__picture">
         <img class="profile-img--small" src="{{item.img}}" data-edit="img" title="{{item.name}}">
@@ -60,13 +60,31 @@
                     </div>
                 </div>
             </div>
-
         </div>
 
-        <div class="frame frame--flexible layout__gap">
-            <label class="frame__title">Description</label>
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
-        </div> 
-    </div>
+            {{#if isBeingEdited}}
+            <div class="frame frame--flexible layout__gap">
+                <label class="frame__title">Description</label>
+                <div contenteditable="true" data-edit="data.description" style="height: 300px">
+                    {{formatDisplay data.description}}
+                </div>
+                
+                <div>
+                    <i class="fas fa-save" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                </div>
+            </div>
+            {{else}}
+            <div class="frame frame--flexible layout__gap">
+                <label class="frame__title">Description</label>
+                <div contenteditable="true" data-edit="data.description" style="padding: 10px 10px">
+                    {{formatDisplay data.description}}
+                </div>
+                
+                <div>
+                    <i class="fas fa-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                </div>
+            </div>
+            {{/if}}
+        </div>
 
 </form>
