--- a/templates/monster-special-ability-sheet.html
+++ b/templates/monster-special-ability-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} layout layout--special-ability" autocomplete="off">
+<form class="{{cssClass}} layout layout--special-ability" autocomplete="off" style="font-size: 0.85rem;">
 
     <div class="layout__picture">
         <img class="profile-img--small" src="{{item.img}}" data-edit="img" title="{{item.name}}">
@@ -10,10 +10,27 @@
 
     <body>
         <div class="layout__body">
+            {{#if isBeingEdited}}
+            <div class="frame frame--flexible" style="height: 300px">
+                <label class="frame__title">Description</label>
+                <div contenteditable="true" data-edit="data.description" style="height: 300px">
+                    {{formatDisplay data.description}}
+                </div>
+                <div>
+                    <i class="fas fa-save" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                </div>
+            </div>
+            {{else}}
             <div class="frame frame--flexible">
                 <label class="frame__title">Description</label>
-                {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
-            </div> 
+                <div style="padding: 10px 10px">
+                    {{formatDisplay data.description}}
+                </div>
+                <div>
+                    <i class="fas fa-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                </div>
+            </div>
+            {{/if}}
         </div>
     </body>
 
