--- a/templates/spell-sheet.html
+++ b/templates/spell-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}}" autocomplete="off" style="font-size: 0.9rem">
     
     <!-- EDIT -->
     {{#if isBeingEdited}}
