--- a/templates/weapon-sheet.html
+++ b/templates/weapon-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{cssClass}}" autocomplete="off" style="font-size: 0.8rem;">
 
     <div class="layout layout--equipment">
         <div class="layout__picture">
@@ -295,9 +295,10 @@
                 </div>
                 <div class="table__field">
                     <span class="table__data table__padding">
-                    {{#each data.features}}
-                            {{this}}
+                    {{#each data.features~}}
+                            {{#unless @first}}{{#if this}}, {{/if}}{{/unless}}{{this~}}
                     {{/each}}
+
                     </span>
                 </div>
             </div>
