--- a/templates/NPC-sheet.html
+++ b/templates/NPC-sheet.html
@@ -18,15 +18,15 @@
                     <div class="table__entry table__entry--3col">
                         <div class="table__field" style="padding: 0 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Kin: </strong></label>
-                            <div class="table__data table__data--fill-form" type="text" contenteditable="true" data-edit="data.info.kin">{{data.info.kin}}</div>
+                            <input class="table__data table__data--fill-form"  type="text" name="data.info.kin" value="{{data.info.kin}}">
                         </div>
                         <div class="table__field" style="padding: 0 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Profession: </strong></label>
-                            <div class="table__data table__data--fill-form" type="text" contenteditable="true" data-edit="data.info.profession">{{data.info.profession}}</div>
+                            <input class="table__data table__data--fill-form" type="text" name="data.info.profession" value="{{data.info.profession}}">
                         </div>
                         <div class="table__field" style="padding: 0 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Age: </strong></label>
-                            <div class="table__data table__data--fill-form" type="text" contenteditable="true" data-edit="data.info.age">{{data.info.age}}</div>
+                            <input class="table__data table__data--fill-form" type="text" name="data.info.age" value="{{data.info.age}}">
                         </div>
                     </div>
                 </div>
