--- a/templates/player-character-sheet.html
+++ b/templates/player-character-sheet.html
@@ -20,36 +20,36 @@
         </div>
 
         <div class="frame frame--flexible" style="justify-content: center;">
-            <div style="padding: 10px 10px">
+            <div style="padding: 5px 10px">
                 <div class="table">
                     <div class="table__entry table__entry--3col">
-                        <div class="table__field" style="padding: 0 10px">
+                        <div class="table__field" style="padding: 3px 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Kin: </strong></label>
-                            <div class="table__data table__data--fill-form" contenteditable="true" data-edit="data.info.kin">{{data.info.kin}}</div>
+                            <input class="table__data table__data--fill-form"  type="text" name="data.info.kin" value="{{data.info.kin}}">
                         </div>
-                        <div class="table__field" style="padding: 0 10px">
+                        <div class="table__field" style="padding: 3px 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Profession: </strong></label>
-                            <div class="table__data table__data--fill-form" type="text" data-edit="data.info.profession" contenteditable="true">{{data.info.profession}}</div>
+                            <input class="table__data table__data--fill-form" type="text" name="data.info.profession" value="{{data.info.profession}}">
                         </div>
-                        <div class="table__field" style="padding: 0 10px">
+                        <div class="table__field" style="padding: 3px 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Age: </strong></label>
-                            <div class="table__data table__data--fill-form" type="text" data-edit="data.info.age" contenteditable="true">{{data.info.age}}</div>
+                            <input class="table__data table__data--fill-form" type="text" name="data.info.age" value="{{data.info.age}}">
                         </div>
                     </div>
                 </div>
-                <div class="table" style="padding: 5px 0">
+                <div class="table">
                     <div class="table__entry">
-                        <div class="table__field" style="padding: 5px 10px">
+                        <div class="table__field" style="padding: 3px 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Dark Secret: </strong></label>
-                            <div class="table__data table__data--fill-form" type="text" data-edit="data.info.dark secret" contenteditable="true">{{data.info.[dark secret]}}</div>
+                            <input class="table__data table__data--fill-form" type="text" name="data.info.dark secret" value="{{data.info.[dark secret]}}">
                         </div>
-                        <div class="table__field" style="padding: 5px 10px">
+                        <div class="table__field" style="padding: 3px 10px">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content"><strong>Pride: </strong></label>
-                            <div class="table__data table__data--fill-form" type="text" data-edit="data.info.pride" contenteditable="true">{{data.info.pride}}</div>
+                            <input class="table__data table__data--fill-form" type="text" name="data.info.pride" value="{{data.info.pride}}">
                         </div>
-                        <div class="table__field" style="padding: 5px 10px; justify-content:start">
+                        <div class="table__field" style="padding: 3px 10px; justify-content:start">
                             <label class="table__data table__data--left-aligned" style="max-width: fit-content;"><strong>Reputation: </strong></label>
-                            <div class="table__data--fill-form" style="width: 30px; text-align: center;" type="text" data-edit="data.info.reputation" contenteditable="true">{{data.info.reputation}}</div>
+                            <input class="table__data--fill-form" style="width: 30px; text-align: center" type="text" name="data.info.reputation" value="{{data.info.reputation}}">
                         </div>
                     </div>
                 </div>
