--- a/templates/character-talent-sheet.html
+++ b/templates/character-talent-sheet.html
@@ -120,7 +120,7 @@
         {{/unlesss}}
             <!-- SAVE BUTTON -->
             <div>
-                <i class="fas fa-save" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                <i class="fas fa-save item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
             </div>
         </div>
 
@@ -184,7 +184,7 @@
             {{/unlesss}}
             <!-- EDIT BUTTON -->
             <div>
-                <i class="fas fa-edit" style="float: right; font-size: 1.5em; padding: 5px"></i>
+                <i class="fas fa-edit item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i>
             </div>
             {{/if}}
         </div>
