--- a/templates/monster-attack-sheet.html
+++ b/templates/monster-attack-sheet.html
@@ -70,7 +70,7 @@
                 </div>
                 
                 <div>
-                    <i class="fas fa-save" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                    <i class="fas fa-save item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
                 </div>
             </div>
             {{else}}
@@ -81,7 +81,7 @@
                 </div>
                 
                 <div>
-                    <i class="fas fa-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                    <i class="fas fa-edit item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
                 </div>
             </div>
             {{/if}}
