--- a/templates/monster-special-ability-sheet.html
+++ b/templates/monster-special-ability-sheet.html
@@ -17,7 +17,7 @@
                     {{formatDisplay data.description}}
                 </div>
                 <div>
-                    <i class="fas fa-save" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                    <i class="fas fa-save item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
                 </div>
             </div>
             {{else}}
@@ -27,7 +27,7 @@
                     {{formatDisplay data.description}}
                 </div>
                 <div>
-                    <i class="fas fa-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                    <i class="fas fa-edit item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
                 </div>
             </div>
             {{/if}}
