--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -173,7 +173,7 @@
             </div>
             {{/unless}}
             <div>
-                <i class="fas fa-save" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+                <i class="fas fa-save item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
             </div>
         </div>
     {{else}}
@@ -306,7 +306,7 @@
             {{/unless}}            
         </div>
         <div>
-            <i class="fas fa-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+            <i class="fas fa-edit item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
         </div>    
     {{/if}}
 </form>
