--- a/templates/equipment-sheet.html
+++ b/templates/equipment-sheet.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
         <div>
-            <i class="fas fa-save" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+            <i class="fas fa-save item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
         </div>
     </div>
     {{else}}
@@ -224,7 +224,7 @@
             </div>
         </div>            
         <div>
-            <i class="fas fa-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
+            <i class="fas fa-edit item-edit" style="float: right; font-size: 1.5em; padding: 5px"></i> 
         </div>    
     {{/if}}
 </form>
